deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reko-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ip"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: reko-tls
  rules:
  - host: detect.just2teach.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: detect-svc
          servicePort: 8081
  - host: translate.just2teach.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: translate-svc
          servicePort: 8081
  - host: reko.just2teach.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: reko-svc
            servicePort: 8080
        - path: /static/*
          backend:
            serviceName: reko-svc
            servicePort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: reko-svc
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"8081":"reko-static", "8080":"reko-iap"}  }'
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8081
    targetPort: 8080
    protocol: TCP
    name: static
  selector:
    app: reko-web
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reko-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reko-web
    spec:
      containers:
      - name: web
        image: eu.gcr.io/recognition-218419/recognition-web:APP_VERSION
        volumeMounts:
        - name: creds
          mountPath: "/etc/creds"
          readOnly: true
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz.action
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
      imagePullSecrets:
      - name: auth-gcr
      volumes:
        - name: creds
          secret:
            secretName: auth-gcp
